--- a/htmlpages/cssworkshops/bootstrap/luminarweb.css
+++ b/htmlpages/cssworkshops/bootstrap/luminarweb.css
@@ -74,4 +74,11 @@ font-weight: 100px;
        }
        #da{
          
-         margin-left: 200px;
+         margin-left: 280px;
+       }
+       h3{
+           color: #5e068a;
+       }
+       h4{
+           font-size:1rem;
+       }
